# wayforth

./: .aikidoignore  .env.example  .gitattributes  .gitignore  .railwayignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  api.html  hn_post.md  index.html  payment-rails.html  railway.json  railway.toml  sdk.html  search.html  smithery.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  chain.py  db.py  main.py  notifications.py  param_mapper.py  pyproject.toml  pytest.ini  ranker.py  ranker_client.py  service_adapters.py  tier_gates.py  wayf_points.py  wayforth_rank_v2.py  x402_pricing.py
apps/api/core/: admin_auth.py  agent_secrets.py  agent_versions.py  audit.py  auth.py  credits.py  db.py  email.py  login_security.py  package_revocation.py  params_eval.py  params_schema.py  rails.py  rate_limit.py  run_token.py  session.py  substitution.py  tier_gates.py  url_validation.py
apps/api/emails/: founding_member.html  low_credits.html  provider_verify.html  subscription_confirmed.html  welcome.html
apps/api/routers/: a2a.py  admin.py  agent.py  auth.py  billing.py  cloud.py  execute.py  llm.py  mfa.py  org.py  provider.py  proxy.py  search.py  templates.py  wayf.py  webhooks.py  x402.py
apps/api/scripts/: agent_redeploy_proof.py  budget_proof.py  build_base_image.py  cleanup_test_accounts.py  deps_live_proof.py  provision_user_api_key.py  seed_premium_catalog.py  send_test_emails.py  test_rate_limits.py
apps/api/services/: agent_deps.py  agent_deps_lock.json  agent_redeploy.py  managed.py  param_mapper.py  sandbox.py  scheduler.py  templates.py  templates_catalog.py  templates_specs.py  uptime.py  wayforthrank.py  x402_client.py  x402_pricing.py
apps/api/static/: admin.html  agent-demo.html  changelog.html  demo.html  health-report.html  intelligence-demo.html  leaderboard.html  pricing.html  roadmap.html  submit.html  wayforthql.html
apps/api/tests/: conftest.py  test_a2a_card.py  test_a2a_interop_gate.py  test_a2a_interop_signing.py  test_a2a_keys.py  test_a2a_router.py  test_a2a_serializer.py  test_account_auth.py  test_agent_deps.py  test_agent_redeploy.py  test_agent_versions.py  test_authz1_admin_killswitch.py  test_authz2_last_ceo.py  test_authz3_invite_role.py  test_authz4_org_scope.py  test_authz5_provider_upgrade.py  test_base_deps_recipe.py  test_billing1_referral_redeem.py  test_body_size_limit.py  test_cloud2_run_cap.py  test_email.py  (+46 more)
apps/crawler/: backfill_scores.py  backfill_v2.py  backfill_v7.py  bulk_prober.py  catalog_expander.py  fix_backfill.py  graph_builder.py  health_monitor.py  main.py  notifications.py  probe_translation.py  promoter.py  pyproject.toml  railway.toml  seed_v2.py  seed_v3.py  seed_v4.py  seed_v5.py  seed_v6.py  seed_v7.py  seed_v8.py  seed_x402.py  seed_x402_batch2.py  x402_monitor.py
apps/labs/: Dockerfile  main.py  pyproject.toml  railway.toml  seed_services.py
(+137 files in other folders)
