[project]
name = "wayforth-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "resend>=2.29.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "stripe>=7.0.0",
    "web3>=7.15.0",
    "cryptography>=47.0.0",
    "cdp-sdk>=0.0.16",
]
