[project]
name = "wayforth-api"
version = "0.8.1"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Wayforth Technologies Inc."}]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "resend>=2.29.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.46.0",
    "stripe>=7.0.0",
    "web3>=7.15.0",
    "cryptography>=47.0.0",
    "cdp-sdk>=0.0.16",
    "PyJWT[crypto]>=2.8.0",
    "dnspython>=2.6.0",
    "redis>=5.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "e2b>=2.28.2",
]
# Removed in v0.7.8 (Section 7) — verified zero imports across apps/api/:
#   beautifulsoup4, lxml, sqlalchemy[asyncio], requests, pillow (standalone).
# Pillow remains transitively via qrcode[pil].
# Requests was removed by Section 2 S10 (httpx async replacement).
